Fix organisme email overflow

--- a/backoffice/src/components/backoffice/moderateur/gestion/organismes/components/Organisme.scss
+++ b/backoffice/src/components/backoffice/moderateur/gestion/organismes/components/Organisme.scss
@@ -45,6 +45,7 @@
     color: $color-black;
     font-size: 0.875rem;
     line-height: 1.25rem;
+    overflow-wrap: break-word;
   }
 
   .btn-group-vertical {
